feed is looking good and add agencies page ... getting there!

--- a/src/mcsafetyfeed-server/production.ini
+++ b/src/mcsafetyfeed-server/production.ini
@@ -13,13 +13,14 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
+    pyramid_mako
 
-sqlalchemy.url = sqlite:///%(here)s/mcsafetyfeed-server.sqlite
+sqlalchemy.url = mysql://mcsafetyfeeduser:password123%%%@lisa.duffnet.local/mcsafetyfeeddb
 
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
-port = 6543
+port = 8087
 
 ###
 # logging configuration
